feat: pagination for certain get endpoints
